Gramatica.txt
<Exp> ::= <Term> ((MINUS | PLUS) <Term>)*
<Exp> ::= [LET] ID EQ <Exp>
<Term> ::= <Factor> ((MUL | DIV) <Factor>)*
<Factor> ::= (PLUS | MINUS)* <Factor>
<Factor> ::= <Pow>
<Pow> ::= <Atom> (<Pow> <Factor>)*
<Atom> ::= INT | FLOAT | STRING | ID | BOOL | TRUE | FALSE | <ListExp> | <TupleExp> | LPAR <Exp> RPAR
<ListExp> ::= LSQUARE [ <Exp> (COMMA <Exp>)* ] RSQUARE
<TupleExp> ::= LPAR <Exp> COMMA <Exp> (COMMA <Exp>)* RPAR
<Bool> ::= TRUE | FALSE
<PrintStmt> ::= "print" LPAR <Exp> RPAR
<InputStmt> ::= "//" .* | "/*" .* "*/"
<CompOP> ::= EQEQ | NEQ | LT | GT | LTE | GTE

PLUS é o +
MUL é o *
DIV é o /
MINUS é o -
POW é o ^
LPAR é o (
RPAR é o )
EQEQ é ==
NEQ é !=
LT é <
GT é >
LTE é <=
GTE é >=
INT é um inteiro qualquer
FLOAT é um float qualquer
ID é qualquer identificador
LET é a palavra reservada let
STRING algo entre aspas
